<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.junior.fireflyapp.ActCadastro">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation = "horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblCadastrarTela"
        android:id="@+id/lblCadastrarTela"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#57fa72" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblNome"
        android:id="@+id/lblNome"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/lblCadastrarTela"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNome"
        android:layout_below="@+id/lblNome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSobrenome"
        android:id="@+id/lblSobrenome"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtNome"
        android:layout_alignLeft="@+id/lblCadastrarTela"
        android:layout_alignStart="@+id/lblCadastrarTela" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSobrenome"
        android:layout_below="@+id/lblSobrenome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSexo"
        android:id="@+id/lblSexo"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtSobrenome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblDtNascimento"
        android:id="@+id/lblDtNascimento"
        android:layout_above="@+id/rdgSexo"
        android:layout_toRightOf="@+id/lblNome"
        android:layout_toEndOf="@+id/lblNome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtDtNasc"
        android:inputType="date"
        android:autoText="false"
        android:layout_alignBottom="@+id/rdgSexo"
        android:layout_alignRight="@+id/lblDtNascimento"
        android:layout_alignEnd="@+id/lblDtNascimento"
        android:layout_alignLeft="@+id/lblDtNascimento"
        android:layout_alignStart="@+id/lblDtNascimento"
        android:selectAllOnFocus="true"
        android:editable="false"
        android:onClick="setDataNasc" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/lblSobrenome"
        android:layout_toStartOf="@+id/lblSobrenome"
        android:id="@+id/rdgSexo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtMasculino"
            android:id="@+id/rbtMasculino"
            android:checked="false"
            android:layout_below="@+id/lblSexo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtFeminino"
            android:id="@+id/rbtFeminino"
            android:checked="false"
            android:layout_below="@+id/rbtMasculino"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblEmail"
        android:id="@+id/lblEmail"
        android:layout_below="@+id/txtDtNasc"
        android:layout_alignLeft="@+id/lblNome"
        android:layout_alignStart="@+id/lblNome"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/lblEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblSenha"
        android:id="@+id/lblSenha"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/txtEmail"
        android:layout_toLeftOf="@+id/txtDtNasc"
        android:layout_toStartOf="@+id/txtDtNasc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtSenha"
        android:layout_below="@+id/lblSenha"
        android:layout_centerHorizontal="true"
        android:maxLength="12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        android:id="@+id/btnCadastrar"
        android:background="#57fa72"
        android:clickable="true"
        android:onClick="onClickCadastrar"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/txtSenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtEmail"
        android:layout_alignEnd="@+id/txtEmail" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marque essa caixa se você aceita os Termos de Uso."
            android:id="@+id/cbxTermosUso"
            android:layout_below="@+id/txtSenha"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:checked="false" />

    </RelativeLayout>

</ScrollView>
